# rust-web-development

./: .gitignore  README.md  db.sql
qa_service/: .env  Cargo.toml  build.rs  config.toml  questions.json
qa_service/handle-errors/: Cargo.toml
qa_service/handle-errors/src/: lib.rs
qa_service/integration-tests/: Cargo.toml
qa_service/integration-tests/src/: main.rs
qa_service/migrations/: 20230622015012_initial-tables.down.sql  20230622015012_initial-tables.up.sql  20230627123217_questions_table.up.sql  20230627123258_answers_table.up.sql  20230627123507_accounts_table.up.sql
qa_service/mock-server/src/: lib.rs
qa_service/src/: config.rs  lib.rs  main.rs  profanity.rs  store.rs
qa_service/src/routes/: answer.rs  authentication.rs  question.rs
qa_service/src/types/: account.rs  answer.rs  pagination.rs  question.rs
