[package]
name = "qa-service-dev"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handle-errors = { path = "handle-errors", version = "0.1.0" }
mock-server = { path = "mock-server", version = "0.1.0" }

openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.28.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3.4", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.6.3", features = [
	"runtime-tokio-rustls",
	"migrate",
	"postgres",
] }
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.2.2"
reqwest-retry = "0.2.2"
rand = "0.8"
rust-argon2 = "1.0"
chrono = "0.4.19"
# in windows, to use paseto, install Strawberry Perl and set its path at top of $PATH
paseto = "2.0"
# built-in func for using config file argument
config = { version = "0.13.1", features = ["toml"] }
# built-in func for CLI argument
clap = { version = "3.1.7", features = ["derive"] }
proc-macro2 = "1.0.37"
# build-in func for .env file
dotenv = "0.15.0"

[build-dependencies]
platforms = "2.0.0"
